[tool.poetry]
name = "apispec-plugins"
version = "0.1.0"
description = "Plugins for apispec"
authors = ["Renato Damas <rena2damas@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/rena2damas/apispec-plugins"
documentation = ""
keywords = [
    "apispec",
    "plugins",
    "swagger",
    "openapi",
    "oas2",
    "oas3",
    "specification",
    "documentation",
    "spec",
    "rest",
    "api",
    "web",
    "flask",
    "python",
    "python3"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = "^3.7"
apispec = { extras = ["yaml"], version = "^2.0.0" }
Flask = { extras = ["flask"], version = "^2.0.0", optional = true }

[tool.poetry.dev-dependencies]
coverage = "^6.0.0"
Flask = { extras = ["flask"], version = "^2.0.0" }
Flask-RESTful = "*"
pre-commit = "^2.0.0"
pytest = "^7.0.0"

[tool.poetry.extras]
flask = ["Flask"]

[tool.poetry.urls]
issues = "https://github.com/rena2damas/apispec-plugins/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
