[tool.poetry]
name = "apispec-plugins"
version = "1.0.0"
description = "Plugins for apispec"
authors = ["Renato Damas <rena2damas@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [
    { include = "*", from = "src" }
]
homepage = ""
repository = "https://github.com/codectl/apispec-plugins"
documentation = ""
keywords = [
    "apispec",
    "plugins",
    "swagger",
    "openapi",
    "oas2",
    "oas3",
    "specification",
    "documentation",
    "spec",
    "rest",
    "api",
    "web",
    "flask",
    "pydantic",
    "python",
    "python3"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
apispec = { extras = ["yaml"], version = "^6.3.0" }
flask = { version = "^2.1.3", optional = true }
pydantic = { version = "^1.10.6", optional = true }
python = "^3.8"

[tool.poetry.dev-dependencies]
coverage = "^7.2.1"
flask = "^2.1.2"
pre-commit = "^3.1.1"
pydantic = "^1.10.5"
pytest = "^7.2.2"

[tool.poetry.extras]
flask = ["Flask"]

[tool.poetry.urls]
issues = "https://github.com/codectl/apispec-plugins/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
