[metadata]
name = apispec-plugins
version = attr: src.apispec_plugins.__version__
description = Plugins for apispec
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rena2damas/apispec-plugins
keywords =
    apispec
    plugins
    swagger
    openapi
    oas2
    oas3
    specification
    documentation
    spec
    rest
    api
    web
    flask
    python
    python3
author = Renato Damas
author_email = rena2damas@gmail.com
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
platforms = any
project_urls =
    Issues = https://github.com/rena2damas/apispec-plugins/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir=
    =src
test_suite = tests
python_requires = >=3.6
install_requires =
    apispec>=2.0.0

[options.packages.find]
where = src

[options.extras_require]
flask = Flask>=2.0.0
tests = pytest; mock; Flask >=2.0.1
